--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device,user-scalable=0" />
-    <link rel="stylesheet" type="text/css" href="assets/css/template.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
 
     <title>MediCenter</title>
 
@@ -210,7 +210,65 @@
     </section>
 
     <footer>
+        <div class="container flexColumn">
+            <div class="footer_menu">
+                <div class="banner1">
+                    <div class="banner_tittle">Health Insurance</div>
+                    <div class="banner_desc">Here in medicenter we have individual</div>
+                </div>
+                <div class="banner2">
+                    <div class="banner_tittle">Medical Records</div>
+                    <div class="banner_desc">Here in medicenter we have individual</div>
+                </div>
+                <div class="banner3">
+                    <div class="banner_tittle">Online Bill Pay</div>
+                    <div class="banner_desc">Here in medicenter we have individual</div>
+                </div>
+            </div>
 
+            <div class="footer_area">
+                 <div class="footer_area_item">
+                    <div class="footer_tittle">Medicenter Clinic</div>
+                    <div class="widget_title_bar"></div>
+
+                    <div class="footer_desc">
+                        Mauris adispiscing mauris fringilla turpis interdum sed pulvinar nisi malesuada individual. 
+                    </div>
+
+                    <div class="footer_info">
+                        <div class="footer_endereco">
+                            <div>Medicenter Clinic</div>
+                            <div>33 Farlane Street</div>
+                            <div>Keitor East</div>
+                            <div>VIC 3033, Australia</div>
+                        </div>
+                        <div class="footer_contato">
+                            <div class="email">medicenter@mail.com</div>
+                            <div>+123 655 755</div>
+                            <div>+123 655 655</div>
+                            
+                        </div>
+                    </div>
+                 </div>
+                 <div class="footer_area_item">
+                    <div class="footer_tittle">Latest Posts</div>
+                    <div class="widget_title_bar"></div>
+
+                    <div class="footer_desc">
+                        <div class="footer_posts">
+                            New study links lutein with eye health benefits
+                        </div>
+                        <div class="footer_day">
+                            13 days ago
+                        </div>
+                    </div>
+                </div>
+                <div class="footer_area_item">
+                    <div class="footer_tittle">Latest Tweets</div>
+                    <div class="widget_title_bar"></div>
+                </div>
+            </div>
+        </div>
     </footer>
     
 </body>
