--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device,user-scalable=0" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
 
     <title>MediCenter</title>
 
@@ -214,15 +215,21 @@
             <div class="footer_menu">
                 <div class="banner1">
                     <div class="banner_tittle">Health Insurance</div>
-                    <div class="banner_desc">Here in medicenter we have individual</div>
+                    <div class="banner_desc">Here in medicenter we have individual <span class="material-symbols-rounded">
+                        arrow_forward
+                        </span></div>
                 </div>
                 <div class="banner2">
                     <div class="banner_tittle">Medical Records</div>
-                    <div class="banner_desc">Here in medicenter we have individual</div>
+                    <div class="banner_desc">Here in medicenter we have individual <span class="material-symbols-rounded">
+                        arrow_forward
+                        </span></div>
                 </div>
                 <div class="banner3">
                     <div class="banner_tittle">Online Bill Pay</div>
-                    <div class="banner_desc">Here in medicenter we have individual</div>
+                    <div class="banner_desc">Here in medicenter we have individual <span class="material-symbols-rounded">
+                        arrow_forward
+                        </span></div>
                 </div>
             </div>
 
@@ -255,6 +262,7 @@
                     <div class="widget_title_bar"></div>
 
                     <div class="footer_desc">
+                        <span class="material-symbols-rounded">arrow_forward</span>
                         <div class="footer_posts">
                             New study links lutein with eye health benefits
                         </div>
@@ -262,11 +270,68 @@
                             13 days ago
                         </div>
                     </div>
+
+                    <div class="footer_desc">
+                        <span class="material-symbols-rounded">arrow_forward</span>
+                        <div class="footer_posts">
+                            Pets may reduce risk of heart disease
+                        </div>
+                        <div class="footer_day">
+                            14 days ago
+                        </div>
+                    </div>
+
+                    <div class="footer_desc">
+                        <span class="material-symbols-rounded">arrow_forward</span>
+                        <div class="footer_posts">
+                            Discoveries offer a new explanation of diabetes
+                        </div>
+                        <div class="footer_day">
+                            3 months ago
+                        </div>
+                    </div>
                 </div>
                 <div class="footer_area_item">
                     <div class="footer_tittle">Latest Tweets</div>
                     <div class="widget_title_bar"></div>
+
+                    <div class="footer_desc">
+                        <span class="material-symbols-rounded">arrow_forward</span>
+                        <div class="footer_posts_desc">
+                            QuanticaLabs is pleased to announce that WordPress version of Medicenter is availabre for the purchase. 
+                            <a href="#">http://t.co/DoUKsDrmX6</a>
+                        </div>
+                        <div class="footer_day">
+                            2 days ago
+                        </div>
+                    </div>
+
+                    <div class="footer_desc">
+                        <span class="material-symbols-rounded">arrow_forward</span>
+                        <div class="footer_posts_desc">
+                            @GoldenSkyUk Please use our Support Forum: 
+                            <a href="#">http://t.co/jG0VHdWnG9</a> to get help. Thank you!
+                        </div>
+                        <div class="footer_day">
+                            22 days ago
+                        </div>
+                    </div>
+
+                    <div class="footer_desc">
+                        <span class="material-symbols-rounded">arrow_forward</span>
+                        <div class="footer_posts_desc">
+                            @GoldenSkyUk Please use our Support Forum: 
+                            <a href="#">http://t.co/jG0VHdWnG9</a> to get help. Thank you!
+                        </div>
+                        <div class="footer_day">
+                            22 days ago
+                        </div>
+                    </div>
                 </div>
+            </div>
+            <div class="border"></div>
+            <div class="copyright">
+                &copy; Copyright - MediCenter by QuanticaLabs
             </div>
         </div>
     </footer>
