--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device,user-scalable=0" />
+    <meta name="viewport" content="width=device-width, user-scalable=0" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/css/media.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
 
     <title>MediCenter</title>
@@ -196,7 +198,7 @@
                     Lorem ipsum dolor sit amet, consectetur adispiscing elit. Ut volutpat rutrum eros sit amet sollicitudin.
                 </div>
                 <div class="information">
-                    <i class="fa-solid fa-phone-office"></i> <label>by phone: </label> <span style="color:black;"><strong>1-800-643-4300</strong></span>
+                    <i class="fa-solid fa-phone-office"></i> <label>by phone: </label> <span><strong>1-800-643-4300</strong></span>
                 </div>
                 <div class="information">
                     <label>by e-mail: </label> <span><a href="#">medicenter@mail.com</a></span>
